customize page (squashed commits made from the github web-UI)

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -52,3 +52,13 @@ jobs:
       run:  yes | bin/deploy --verbose ${{ steps.setup.outputs.NO_PUSH }}
                     --src ${{ steps.setup.outputs.SRC_BRANCH }} 
                     --deploy ${{ steps.setup.outputs.DEPLOY_BRANCH }} 
+    - name: HTML to PDF
+      uses: fifsky/html-to-pdf-action@v0.0.2
+      with:
+        htmlFile: ./cv-full.html
+        outputFile: ./assets/pdf/cv-schwanekamp.pdf
+        pdfOptions: '{"format": "A4", "margin": {"top": "10mm", "left": "20mm", "right": "20mm", "bottom": "10mm"}}'
+    - name: Git Auto Commit
+      uses: stefanzweifel/git-auto-commit-action@v4.9.1
+      with:
+        push_options: --force
